# Camera_AI

./: .gitignore  AI_processor.py  Dockerfile  README.md  RTSP.py  blur_webcam.py  face_detection.code-workspace  http_video_server.py  main.py  pyproject.toml  requirements.txt  yolo_config.json
docs/: ARCHITECTURE.md
face_detection_system/: requirements.txt  requirements_time_based_api.txt  run_time_based_api.py  test_time_based_api.sh  test_trained_model.py  time_based_face_detection_api.py
runs/face_detection/yolov8_face/: args.yaml  results.csv
server/: app.py  config.py  face_recognition_timing.py  face_time_api.py  person_timing.py  recording.py  verification.py  websocket_stream.py
server/analytics/: person_count.py
server/core/: state.py
server/storage/: s3.py
time_based_face_detection/: README.md  requirements.txt
tracking_system/: __init__.py  app.py  config.py  crowd_optimizer.py  dependencies.py  embedding_processor.py  face_detector.py  face_tracker.py  models.py  person_detector.py  pinecone_manager.py  server_manager.py  stored_person_manager.py  video_processor.py  video_tracker.py
