[project]
name = "safeview-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "boto3>=1.40.5",
    "fastapi>=0.116.1",
    "mysql-connector-python>=9.4.0",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
