[project]
name = "safeview-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.5.0,<2.6.0",
    "torchvision>=0.18.0",
    "ultralytics>=8.3.30,<8.4.0",
    "torchaudio>=2.3.0",
    "aiohttp>=3.12.15",
    "boto3>=1.40.5",
    "fastapi>=0.116.1",
    "mysql-connector-python>=9.4.0",
    "numpy>=1.24,<2",
    "opencv-contrib-python>=4.8,<5",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "mediapipe==0.10.21",
    "python-multipart>=0.0.9"
]